--- a/src/client/assets/styles/components/mobile/_header.scss
+++ b/src/client/assets/styles/components/mobile/_header.scss
@@ -1,5 +1,12 @@
 .c-header {
   $self: &;
+
+  position: fixed;
+  height: 3.5rem;
+  width: 100%;
+  transition: height 250ms;
+  overflow: hidden;
+
   background: linear-gradient(
     90deg,
     rgba(0, 100, 102, 1) 50%,
@@ -10,13 +17,22 @@
     border-radius: 0 0 10px 10px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 
-    #{$self}__content {
-      width: 100%;
-      height: 100%;
+    #{$self}__heading {
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: 1rem;
     }
   }
+
+  &--extended {
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  // &__navmenu {
+  //   transition: height 10s;
+  // }
 }
