--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -1,74 +1,104 @@
+// @todo refactor with grid instead of flexbox
 .c-movie-card {
   $self: &;
+
   background: linear-gradient(
     180deg,
-    $col-purple-light 50%,
+    $col-purple-light 75%,
     $col-purple-medium 100%
   );
-  border-radius: 5px;
-  height: 10rem;
+  border-radius: 7px;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.5rem;
   box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.2);
 
+  > * {
+    padding: 0 10px;
+  }
+
   &__title {
-    padding: 10px;
-    height: 40%;
+    flex-basis: 45%;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    // border-bottom: 2px solid $col-black;
+    background-color: $col-purple-dark;
+    // background-image: url(https://theposterdb.com/api/assets/11949);
+    // background-position-y: 100%;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    // gap: 0.25rem;
 
-    h3 {
-      padding-bottom: 2px;
-      /* vertical overflow ellipsis: https://stackoverflow.com/a/13924997/16503617 */
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+    #{$self}__date {
+      align-self: flex-end;
+      font-size: small;
+      padding: 0.1rem;
+
+      span {
+        background-color: $col-gray-dark;
+        opacity: 90%;
+        padding: 0.2rem 0.3rem;
+        padding-top: 0;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+      }
+    }
+
+    #{$self}__name {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      h3 {
+        text-align: center;
+        padding-bottom: 0.1rem;
+        /* vertical overflow ellipsis: https://stackoverflow.com/a/13924997/16503617 */
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
     }
   }
 
-  &__meta {
-    padding: 0 10px;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  &__rating {
+    text-align: center;
 
-    #{$self}__genres {
-      font-size: 0.8rem;
-      color: $col-gray-light;
-      font-style: italic;
-      opacity: 90%;
+    &--dire {
+      @include rating-gradient(black);
     }
 
-    #{$self}__rating {
-      text-align: center;
-      margin-bottom: 0.5rem;
-
-      &--dire {
-        @include rating-gradient(black);
-      }
-
-      &--bad {
-        @include rating-gradient(red);
-      }
-
-      &--meh {
-        @include rating-gradient(orange);
-      }
-
-      &--good {
-        @include rating-gradient(limegreen);
-      }
-
-      &--great {
-        @include rating-gradient(darkgreen);
-      }
+    &--bad {
+      @include rating-gradient(red);
     }
+
+    &--meh {
+      @include rating-gradient(orange);
+    }
+
+    &--good {
+      @include rating-gradient(rgb(47, 163, 36));
+    }
+
+    &--great {
+      @include rating-gradient(rgb(19, 228, 19));
+    }
+  }
+
+  &__genres {
+    flex-grow: 1;
+    font-size: small;
+    color: $col-gray-light;
+    font-style: italic;
+    opacity: 90%;
   }
 
   &__expand {
-    height: 20%;
+    flex-basis: 10%;
     text-align: center;
 
     details {
@@ -90,8 +120,14 @@
   }
 }
 
-@media (min-width: 356) {
-  .c-movie-card {
-    height: 12rem;
-  }
-}
+// @todo why does this not work?
+// @media screen and (min-width: 356) {
+//   .c-movie-card {
+//     height: 12rem;
+//     background-color: aqua;
+
+//     &__title {
+//       flex-basis: 45%;
+//     }
+//   }
+// }
