--- a/src/client/assets/styles/pages/_index.scss
+++ b/src/client/assets/styles/pages/_index.scss
@@ -7,7 +7,8 @@
 
     &__link {
       display: flex;
-      align-items: center;
+      align-items: flex-end;
+      padding-bottom: 0.1rem;
     }
   }
 }
