--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -17,16 +17,17 @@
 
   &__title {
     flex-basis: 45%;
-    padding: 0 10px;
     overflow: hidden;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     background-color: $col-purple-dark;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
     #{$self}__date {
       align-self: flex-end;
+      margin-right: 10px;
       font-size: small;
       background-color: rgba($col-gray-dark, 0.8);
       padding: 0.2rem;
@@ -34,20 +35,20 @@
       border-bottom-right-radius: 5px;
     }
 
+    // @todo overhaul title styling
     #{$self}__name {
-      flex-grow: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      align-self: flex-start;
+      max-width: 80%;
+      font-size: medium;
+      padding: 0.2rem;
+      background-color: $col-black;
 
-      h3 {
-        // recommended styles by fitty: https://github.com/rikschennink/fitty
-        white-space: nowrap;
-        display: inline-block;
-
-        text-align: center;
-        padding-bottom: 0.1rem;
-      }
+      // https://stackoverflow.com/a/13924997/13575631
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
   }
 
