--- a/src/client/assets/styles/components/_header.scss
+++ b/src/client/assets/styles/components/_header.scss
@@ -4,8 +4,6 @@
   position: fixed;
   height: 3.5rem;
   width: 100%;
-  transition: height 250ms;
-  overflow: hidden;
   z-index: 100;
 
   background: linear-gradient(
@@ -15,6 +13,8 @@
   );
 
   &--mobile {
+    transition: height 250ms;
+    overflow: hidden;
     border-radius: 0 0 10px 10px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 
@@ -23,17 +23,23 @@
       align-items: center;
       justify-content: space-between;
       gap: 1rem;
+
+      #{$self}__btn {
+        padding: 0.2rem;
+      }
+    }
+
+    &--extended {
+      height: 10rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
   }
 
-  &--extended {
-    height: 10rem;
+  &--desktop {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
   }
-
-  // &__navmenu {
-  //   transition: height 10s;
-  // }
 }
