--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -106,6 +106,61 @@
       position: absolute;
     }
   }
+
+  &--placeholder,
+  &--placeholder &__title {
+    background: linear-gradient(90deg, $col-purple-light, $col-purple-dark);
+    background-size: 400% 400%;
+
+    -webkit-animation: loadingGradient 2s ease infinite;
+    -moz-animation: loadingGradient 2s ease infinite;
+    -o-animation: loadingGradient 2s ease infinite;
+    animation: loadingGradient 2s ease infinite;
+  }
+  @-webkit-keyframes loadingGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  @-moz-keyframes loadingGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  @-o-keyframes loadingGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  @keyframes loadingGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
 
 // @todo why does this not work?
