--- a/src/client/assets/styles/components/_movie-card-container.scss
+++ b/src/client/assets/styles/components/_movie-card-container.scss
@@ -1,7 +1,14 @@
 .c-movie-card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   gap: 1rem;
-  padding-top: 0.25rem;
-  padding-bottom: 1rem;
+
+  &--mobile {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    padding-top: 0.25rem;
+    padding-bottom: 1rem;
+  }
+
+  &--desktop {
+    grid-template-columns: repeat(auto-fit, 20rem);
+  }
 }
