--- a/src/client/assets/styles/abstracts/_variables.scss
+++ b/src/client/assets/styles/abstracts/_variables.scss
@@ -1,14 +1,22 @@
-$col-green-light: #006466;
-$col-green-medium: #0b525b;
-$col-green-dark: #1b3a4b;
-$col-blue-medium: #212f45;
-$col-blue-dark: #272640;
-$col-purple-light: #4d194d;
-$col-purple-medium: #3e1f47;
-$col-purple-dark: #312244;
-$col-white-light: #f8f9fa;
-$col-white-medium: #e9ecef;
-$col-gray-light: #adb5bd;
-$col-gray-medium: #6c757d;
-$col-gray-dark: #495057;
-$col-black: #212529;
+// colors
+$surface: #121212;
+$on-surface: #ffffff;
+$on-surface-medium: rgba($on-surface, 0.8);
+$on-color: #000000;
+$primary: #70e0dd;
+$primary-accent: #00999b;
+$secondary: #b499f3;
+$secondary-accent: #a200c0;
+
+// font-sizes
+$sm-2x: 0.625rem;
+$sm-x: 0.75rem;
+$sm: 0.875rem;
+$md: 1rem;
+$lg: 1.125rem;
+$lg-x: 1.25rem;
+$lg-2x: 1.375rem;
+$lg-3x: 1.5rem;
+$lg-4x: 2rem;
+$lg-5x: 3rem;
+$lg-6x: 4rem;
