--- a/src/client/assets/styles/abstracts/_mixins.scss
+++ b/src/client/assets/styles/abstracts/_mixins.scss
@@ -33,3 +33,8 @@
     @include _rating-gradient(rgb(19, 228, 19), $layout);
   }
 }
+
+@mixin background-layer($layer) {
+  $col: rgba($surface, calc(1 - #{$layer} * 0.05));
+  background: linear-gradient($col, $col), $on-surface;
+}
