--- a/src/client/assets/styles/base/_button.scss
+++ b/src/client/assets/styles/base/_button.scss
@@ -1,8 +1,10 @@
 .g-btn-reset {
   background-color: transparent;
   border: none;
-  display: flex;
-  align-items: center;
+  text-align: left;
   padding: 0;
   color: inherit;
+  cursor: pointer;
+  min-width: 0;
+  min-height: 0;
 }
