--- a/src/client/assets/styles/components/_header.scss
+++ b/src/client/assets/styles/components/_header.scss
@@ -6,11 +6,7 @@
   width: 100%;
   z-index: 100;
 
-  background: linear-gradient(
-    90deg,
-    rgba(0, 100, 102, 1) 50%,
-    rgba(11, 82, 91, 1) 100%
-  );
+  @include background-layer(4);
 
   &--mobile {
     transition: height 250ms;
@@ -26,6 +22,8 @@
 
       #{$self}__btn {
         padding: 0.2rem;
+        display: flex;
+        align-items: center;
       }
     }
 
