--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -2,12 +2,16 @@
 .c-movie-card {
   $self: &;
 
-  background: linear-gradient(
-    180deg,
-    $col-purple-light 75%,
-    $col-purple-medium 100%
-  );
+  @include background-layer(1);
   box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+
+  &__date,
+  &__mm {
+    padding: 0.2rem;
+    @include background-layer(2);
+    opacity: 0.9;
+  }
 
   &__title {
     // https://stackoverflow.com/a/13924997/13575631
@@ -18,51 +22,73 @@
   }
 
   &__genres {
-    font-size: small;
-    color: $col-gray-light;
+    font-size: $sm;
+    color: $on-surface-medium;
     font-style: italic;
-    opacity: 90%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
   }
 
   &--desktop {
     position: relative;
     display: grid;
+    // @todo remove expand element, just put maximize icon in the corner
+    // of the card and let the button around the card do the job
     grid-template-areas:
-      "poster ."
-      "poster title"
-      "poster rating"
-      "poster genres"
-      "poster expand"
-      "poster .";
-    grid-template-columns: 50% 1fr;
-    grid-template-rows: 1% 40% 1fr 1fr 1fr 1%;
+      "poster .      ."
+      "poster title  ."
+      "poster rating ."
+      "poster genres ."
+      "poster expand ."
+      "poster .      .";
+    grid-template-columns: 50% 1fr 0;
+    grid-template-rows: 0 40% 1fr 1fr 1fr 0;
     gap: 0.5rem;
     height: 15rem;
     border-radius: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
+    cursor: pointer;
 
-    > *:not(#{$self}__poster) {
-      padding-right: 10px;
+    // @todo add this effect to the parent button as well (for tab focus)
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px 0 $primary;
+      z-index: 1;
     }
 
     #{$self}__date {
+      z-index: 1;
       position: absolute;
-      background-color: red;
-      border-top-left-radius: inherit;
-      padding: 0.2rem;
+      top: 0.5rem;
+      border-radius: 0 5px 5px 0;
     }
 
-    #{$self}__poster {
+    #{$self}__mm {
+      z-index: 1;
+      position: absolute;
+      top: 2.5rem;
+      border-radius: 0 5px 5px 0;
+    }
+
+    #{$self}__poster-container {
       grid-area: poster;
-      object-fit: cover;
-      max-height: 100%;
-      max-width: 100%;
+      z-index: 0;
+      background-color: $primary-accent;
       border-top-left-radius: inherit;
       border-bottom-left-radius: inherit;
+
+      #{$self}__poster {
+        object-fit: cover;
+        max-height: 100%;
+        max-width: 100%;
+      }
     }
 
     #{$self}__title {
       grid-area: title;
-      font-size: 1.25rem;
+      font-size: $lg-x;
     }
 
     #{$self}__rating {
@@ -72,7 +98,6 @@
       align-items: center;
       padding-left: 0.5rem;
       font-weight: bold;
-      font-size: 1rem;
 
       @include rating-gradient(desktop);
     }
@@ -83,6 +108,19 @@
 
     #{$self}__expand {
       grid-area: expand;
+      margin: -0.5rem;
+      margin-top: 0;
+      border-bottom-right-radius: inherit;
+      @include background-layer(2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      font-size: $lg;
+
+      &:hover {
+        @include background-layer(3);
+      }
     }
   }
 
@@ -99,7 +137,7 @@
       overflow: hidden;
       border-top-left-radius: inherit;
       border-top-right-radius: inherit;
-      background-color: $col-purple-dark;
+      background-color: red;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -107,9 +145,7 @@
       #{$self}__date {
         align-self: flex-end;
         margin-right: 10px;
-        font-size: small;
-        background-color: rgba($col-gray-dark, 0.8);
-        padding: 0.2rem;
+        font-size: $sm-x;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
       }
@@ -118,9 +154,8 @@
       #{$self}__name {
         align-self: flex-start;
         max-width: 80%;
-        font-size: medium;
         padding: 0.2rem;
-        background-color: $col-black;
+        background-color: red;
       }
     }
 
@@ -158,50 +193,16 @@
     }
   }
 
+  // @todo rework loading animation with pulsing background-layer colors
   &--placeholder,
   &--placeholder * {
-    background: linear-gradient(90deg, $col-purple-light, $col-purple-dark);
+    background: linear-gradient(90deg, white, black);
     background-size: 400% 400%;
     border-radius: 7px;
 
-    -webkit-animation: loadingGradient 2s ease infinite;
-    -moz-animation: loadingGradient 2s ease infinite;
-    -o-animation: loadingGradient 2s ease infinite;
     animation: loadingGradient 2s ease infinite;
   }
-  @-webkit-keyframes loadingGradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @-moz-keyframes loadingGradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @-o-keyframes loadingGradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
+
   @keyframes loadingGradient {
     0% {
       background-position: 0% 50%;
