--- a/src/client/assets/styles/components/_search.scss
+++ b/src/client/assets/styles/components/_search.scss
@@ -2,29 +2,32 @@
   border-radius: 15px;
   max-width: 30rem;
   margin: 1rem 0;
-  background-color: $col-gray-light;
+  @include background-layer(10);
   box-shadow: 3px 3px 3px 2px rgba(#000, 0.2);
   display: flex;
   justify-content: space-between;
   padding: 0.2rem 0.5rem 0.2rem 1rem;
 
-  > * {
-    background-color: $col-gray-light;
-    color: $col-black;
-    border: none;
-  }
-
   &__input {
     flex-grow: 1;
     min-height: 1.5rem;
     line-height: 1.5rem;
+    background: inherit;
+    color: $on-surface;
+    border: none;
+
+    &:focus {
+      outline: none;
+    }
 
     &::placeholder {
-      color: $col-gray-medium;
+      color: $on-surface-medium;
     }
   }
 
   &__btn {
     padding: 0 0.5rem;
+    display: flex;
+    align-items: center;
   }
 }
