--- a/src/client/assets/styles/abstracts/_variables.scss
+++ b/src/client/assets/styles/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 // colors
-$surface: #121212;
+$surface: hsl(0, 0%, 7%);
 $on-surface: #ffffff;
-$on-surface-dim: rgba($on-surface, 0.8);
-$on-surface-2dim: rgba($on-surface, 0.6);
-$on-surface-3dim: rgba($on-surface, 0.4);
-$on-surface-4dim: rgba($on-surface, 0.2);
+$on-surface-dim: hsl(0, 0%, 80%);
+$on-surface-2dim: hsl(0, 0%, 60%);
+$on-surface-3dim: hsl(0, 0%, 40%);
+$on-surface-4dim: hsl(0, 0%, 20%);
 $on-color: #000000;
 $primary: #70e0dd;
 $primary-accent: #00999b;
