add experimental header text shadow

--- a/src/client/assets/styles/components/_header.scss
+++ b/src/client/assets/styles/components/_header.scss
@@ -39,5 +39,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    h1 {
+      text-shadow: $primary 3px 3px 0;
+    }
   }
 }
