rework desktop movie card + placeholder styling

--- a/src/client/assets/styles/layouts/_mobile.scss
+++ b/src/client/assets/styles/layouts/_mobile.scss
@@ -21,7 +21,7 @@
   &--desktop {
     grid-template-rows: 4rem 1fr auto;
     > * {
-      padding: 30px;
+      padding: 1.5rem;
     }
     > .p-index {
       grid-row-start: 2;
