--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -7,41 +7,15 @@
   overflow: hidden;
   height: 100%;
 
-  &__date,
-  &__mm {
-    padding: 0.2rem;
-    @include background-layer(2);
-    opacity: 0.9;
-  }
-
-  &__title {
-    // https://stackoverflow.com/a/13924997/13575631
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-  }
-
-  &__genres {
-    font-size: $sm;
-    color: $on-surface-dim;
-    font-style: italic;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-  }
-
   &--desktop {
     position: relative;
     display: grid;
     grid-template-areas:
       "poster title"
-      "poster genres"
       "poster rating"
-      "poster expand";
+      "poster meta";
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto 2fr 1fr 1fr;
+    grid-template-rows: 45% 1fr 2fr;
     border-radius: 10px;
     transition: transform 0.2s, box-shadow 0.2s;
     height: 11rem;
@@ -57,65 +31,157 @@
       }
     }
 
-    #{$self}__date {
-      z-index: 1;
-      position: absolute;
-      top: 0.5rem;
-      border-radius: 0 5px 5px 0;
-    }
-
-    #{$self}__mm {
-      z-index: 1;
-      position: absolute;
-      top: 2.5rem;
-      border-radius: 0 5px 5px 0;
-    }
-
-    #{$self}__poster-container {
+    #{$self}__poster {
       grid-area: poster;
       z-index: 0;
+      width: 100%;
+      height: 100%;
       background-color: darkslategray;
 
-      #{$self}__poster {
+      img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
     }
 
+    #{$self}__mm {
+      padding: 0.2rem;
+      @include background-layer(2);
+      opacity: 0.9;
+      z-index: 1;
+      position: absolute;
+      top: 2.5rem;
+      border-radius: 0 5px 5px 0;
+    }
+
     #{$self}__title {
       grid-area: title;
-      font-size: $lg-x;
       margin: 0.5rem;
-      max-height: 4rem;
+      overflow: hidden;
+
+      &__main {
+        font-size: $lg-x;
+        padding-bottom: 0.1rem;
+        max-height: 4rem;
+
+        // https://stackoverflow.com/a/13924997/13575631
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+      }
+
+      &__sub {
+        font-size: $sm;
+        padding: 0.25rem 0;
+        display: flex;
+        align-items: center;
+        gap: 0.25rem;
+
+        #{$self}__title__fsk {
+          height: $md;
+        }
+
+        #{$self}__title__genres {
+          color: $on-surface-2dim;
+          font-style: italic;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+      }
     }
 
     #{$self}__rating {
       grid-area: rating;
-      font-weight: bold;
-      // @include background-layer(3);
+      margin: 0.3rem 0;
+      padding: 0.2rem 0.5rem;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      color: $on-surface-dim;
 
-      &__content {
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        padding: 0.5rem;
-        @include rating-gradient(desktop);
+      &__total {
+        font-weight: bold;
+        font-size: $lg;
+      }
+
+      &--dire {
+        background: linear-gradient(
+          90deg,
+          transparent,
+          hsla(0, 95%, 50%, 0.15),
+          transparent
+        );
+        #{$self}__rating__total {
+          color: hsl(0, 95%, 50%);
+        }
+      }
+
+      &--bad {
+        background: linear-gradient(
+          90deg,
+          transparent,
+          hsla(0, 70%, 53%, 0.1),
+          transparent
+        );
+        #{$self}__rating__total {
+          color: hsl(0, 70%, 53%);
+        }
+      }
+
+      &--meh {
+        background: linear-gradient(
+          90deg,
+          transparent,
+          hsla(33, 75%, 53%, 0.1),
+          transparent
+        );
+        #{$self}__rating__total {
+          color: hsl(33, 75%, 53%);
+        }
+      }
+
+      &--good {
+        background: linear-gradient(
+          90deg,
+          transparent,
+          hsla(120, 60%, 60%, 0.1),
+          transparent
+        );
+        #{$self}__rating__total {
+          color: hsl(120, 60%, 60%);
+        }
+      }
+
+      &--great {
+        background: linear-gradient(
+          90deg,
+          transparent,
+          hsla(120, 95%, 50%, 0.15),
+          transparent
+        );
+        #{$self}__rating__total {
+          color: hsl(120, 95%, 50%);
+        }
       }
     }
 
-    #{$self}__genres {
-      grid-area: genres;
-      padding: 0 0.5rem;
+    #{$self}__meta {
+      grid-area: meta;
+      margin: 0.5rem;
+      font-size: $sm-x;
+      line-height: $sm;
+      color: $on-surface-dim;
     }
 
     #{$self}__expand {
+      position: absolute;
+      bottom: 0.5rem;
+      right: 0.5rem;
       color: $on-surface-4dim;
       transition: color 0.1s;
-      padding: 0.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
     }
   }
 
@@ -136,6 +202,12 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      // https://stackoverflow.com/a/13924997/13575631
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
 
       #{$self}__date {
         align-self: flex-end;
@@ -163,6 +235,13 @@
     #{$self}__genres {
       flex-grow: 1;
       padding: 0 10px;
+      font-size: $sm;
+      color: $on-surface-2dim;
+      font-style: italic;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
     }
 
     #{$self}__expand {
@@ -185,28 +264,6 @@
       div {
         position: absolute;
       }
-    }
-  }
-
-  // @todo rework loading animation with pulsing background-layer colors
-  &--placeholder,
-  &--placeholder * {
-    background: linear-gradient(90deg, white, black);
-    background-size: 400% 400%;
-    border-radius: 7px;
-
-    animation: loadingGradient 2s ease infinite;
-  }
-
-  @keyframes loadingGradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
     }
   }
 }
