--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -8,6 +8,7 @@
 // global styles & resets
 @import "./base/base";
 @import "./base/button";
+@import "./base/typography";
 
 // layout components and grid macro layouts
 @import "./layouts/mobile";
