--- a/src/client/assets/styles/base/_typography.scss
+++ b/src/client/assets/styles/base/_typography.scss
@@ -89,3 +89,44 @@
       url("~assets/fonts/roboto-slab/roboto-slab-v16-latin-900.svg#RobotoSlab")
       format("svg"); /* Legacy iOS */
 }
+
+/* comfortaa-regular - latin */
+@font-face {
+  font-family: "Comfortaa";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/comfortaa/comfortaa-v30-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/comfortaa/comfortaa-v30-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/comfortaa/comfortaa-v30-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/comfortaa/comfortaa-v30-latin-regular.woff") format("woff"),
+    /* Modern Browsers */
+      url("../fonts/comfortaa/comfortaa-v30-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/comfortaa/comfortaa-v30-latin-regular.svg#Comfortaa")
+      format("svg"); /* Legacy iOS */
+}
+
+/* comfortaa-700 - latin */
+@font-face {
+  font-family: "Comfortaa";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/comfortaa/comfortaa-v30-latin-700.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/comfortaa/comfortaa-v30-latin-700.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/comfortaa/comfortaa-v30-latin-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/comfortaa/comfortaa-v30-latin-700.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/comfortaa/comfortaa-v30-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/comfortaa/comfortaa-v30-latin-700.svg#Comfortaa")
+      format("svg"); /* Legacy iOS */
+}
