--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -11,7 +11,7 @@
 @import "./base/typography";
 
 // layout components and grid macro layouts
-@import "./layouts/mobile";
+@import "./layouts/default";
 
 // shared components
 @import "./components/movie-card-container";
