--- a/src/client/assets/styles/components/_header.scss
+++ b/src/client/assets/styles/components/_header.scss
@@ -5,14 +5,48 @@
   height: 3.5rem;
   width: 100%;
   z-index: 100;
+  // overflow: hidden;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 
-  @include background-layer(4);
+  @include background-layer(0);
+
+  h1 {
+    padding: 1rem;
+    font-family: Comfortaa;
+    font-weight: 700;
+    // text-shadow: 0 0 7px $on-surface, 0 0 10px $on-surface, 0 0 21px $on-surface,
+    //   0 0 42px $primary-accent, 0 0 82px $primary-accent,
+    //   0 0 92px $primary-accent, 0 0 102px $primary-accent;
+    border: 0.2rem solid $on-surface;
+    border-radius: 20px;
+    box-shadow: 0 0 0.2rem $on-surface, 0 0 0.2rem $on-surface,
+      0 0 2rem $primary-accent, 0 0 0.8rem $primary-accent,
+      inset 0 0 1.3rem $primary-accent;
+    animation: pulsate 1.5s infinite alternate;
+  }
+
+  @keyframes pulsate {
+    100% {
+      text-shadow: 0 0 4px $on-surface, 0 0 11px $on-surface,
+        0 0 19px $on-surface, 0 0 40px $primary-accent, 0 0 80px $primary-accent,
+        0 0 90px $primary-accent,
+        0 0 100px $primary-accent /* ,
+        0 0 150px $primary-accent */;
+    }
+
+    0% {
+      text-shadow: 0 0 2px $on-surface, 0 0 4px $on-surface, 0 0 6px $on-surface,
+        0 0 10px $primary-accent, 0 0 45px $primary-accent,
+        0 0 55px $primary-accent,
+        0 0 70px $primary-accent /* ,
+        0 0 80px $primary-accent */;
+    }
+  }
 
   &--mobile {
     transition: height 250ms;
     overflow: hidden;
     border-radius: 0 0 10px 10px;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 
     #{$self}__heading {
       display: flex;
@@ -39,9 +73,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    h1 {
-      text-shadow: $primary 3px 3px 0;
-    }
+    height: 7rem;
+    padding: 0 5vw;
   }
 }
