--- a/src/client/assets/styles/components/_movie-card-container.scss
+++ b/src/client/assets/styles/components/_movie-card-container.scss
@@ -18,6 +18,7 @@
   gap: 1rem;
   overflow-x: auto;
   flex-wrap: nowrap;
-  padding: 24px;
+  padding: 32px;
   max-width: 90vw;
+  margin: 0 auto;
 }
