--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -36,12 +36,10 @@
       grid-area: poster;
       z-index: 0;
       background-color: red;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: scale(1.01); // fixes round corner aliasing error
     }
 
     #{$self}__mm {
