--- a/src/client/assets/styles/base/_typography.scss
+++ b/src/client/assets/styles/base/_typography.scss
@@ -130,3 +130,79 @@
       url("../fonts/comfortaa/comfortaa-v30-latin-700.svg#Comfortaa")
       format("svg"); /* Legacy iOS */
 }
+
+/* oswald-regular - latin */
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/oswald/oswald-v40-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/oswald/oswald-v40-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/oswald/oswald-v40-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/oswald/oswald-v40-latin-regular.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/oswald/oswald-v40-latin-regular.svg#Oswald") format("svg"); /* Legacy iOS */
+}
+
+/* oswald-500 - latin */
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/oswald/oswald-v40-latin-500.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/oswald/oswald-v40-latin-500.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/oswald/oswald-v40-latin-500.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-500.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-500.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/oswald/oswald-v40-latin-500.svg#Oswald") format("svg"); /* Legacy iOS */
+}
+
+/* oswald-600 - latin */
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/oswald/oswald-v40-latin-600.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/oswald/oswald-v40-latin-600.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/oswald/oswald-v40-latin-600.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-600.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-600.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/oswald/oswald-v40-latin-600.svg#Oswald") format("svg"); /* Legacy iOS */
+}
+
+/* oswald-700 - latin */
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/oswald/oswald-v40-latin-700.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/oswald/oswald-v40-latin-700.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/oswald/oswald-v40-latin-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-700.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/oswald/oswald-v40-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/oswald/oswald-v40-latin-700.svg#Oswald") format("svg"); /* Legacy iOS */
+}
