--- a/src/client/assets/styles/pages/_index.scss
+++ b/src/client/assets/styles/pages/_index.scss
@@ -2,6 +2,22 @@
   width: 90vw;
   margin: 3rem auto;
 
+  &__search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    .c-search {
+      flex-grow: 1;
+    }
+
+    p {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   &__heading {
     display: flex;
     align-items: flex-end;
