--- a/src/client/assets/styles/components/_movie-card-container.scss
+++ b/src/client/assets/styles/components/_movie-card-container.scss
@@ -18,7 +18,8 @@
   gap: 1rem;
   overflow-x: auto;
   flex-wrap: nowrap;
-  padding: 32px;
-  max-width: 90vw;
-  margin: 0 auto;
+  padding: 28px;
+  margin: -20px 0;
+
+  // @todo customize colors (esp. webkit)
 }
