--- a/src/client/assets/styles/components/_movie-card-placeholder.scss
+++ b/src/client/assets/styles/components/_movie-card-placeholder.scss
@@ -29,6 +29,7 @@
     grid-template-rows: 45% 1fr 2fr;
     border-radius: 10px;
     height: 11rem;
+    flex: 0 0 22rem;
 
     #{$self}__poster {
       @extend .placeholder-content;
