--- a/src/client/assets/styles/components/_search.scss
+++ b/src/client/assets/styles/components/_search.scss
@@ -1,7 +1,7 @@
 .c-search {
-  border-radius: 15px;
-  max-width: 25rem;
-  margin: 1rem 0;
+  border-radius: 20px;
+  width: 100%;
+  min-width: 10rem;
   background: $on-surface-dim;
   box-shadow: 3px 3px 3px 2px rgba(#000, 0.2);
   display: flex;
@@ -10,7 +10,7 @@
 
   &__input {
     flex-grow: 1;
-    min-height: 1.5rem;
+    min-height: 2rem;
     line-height: 1.5rem;
     background: inherit;
     color: $on-surface-4dim;
