--- a/src/client/assets/styles/pages/_index.scss
+++ b/src/client/assets/styles/pages/_index.scss
@@ -4,30 +4,47 @@
 
   &__search {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    max-width: 30rem;
+    margin: 1rem auto;
+    gap: 0.5rem;
 
-    .c-search {
-      flex-grow: 1;
-    }
-
-    p {
+    &__extended {
       display: flex;
       align-items: center;
+      align-self: flex-end;
+
+      .c-icon {
+        margin: 0 -3px -2px 0;
+      }
     }
   }
 
-  &__heading {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    padding: 0.5rem 0;
-    font-family: "Roboto Slab";
-    &__link {
+  &__movie-display {
+    margin: 4rem 0 6rem;
+
+    &__heading {
+      margin: 1rem 0;
       display: flex;
       align-items: flex-end;
-      padding-bottom: 0.1rem;
+      justify-content: space-between;
+
+      h2 {
+        font-family: Comfortaa;
+        font-size: $lg-4x;
+
+        .c-icon {
+          margin: 0 0.5rem -0.2rem 0;
+        }
+      }
+
+      a {
+        display: flex;
+        align-items: flex-end;
+        padding-bottom: 0.1rem;
+      }
     }
   }
 }
