--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/search";
+@import "./components/movie-table";
 @import "./components/mobile/navmenu";
 @import "./components/desktop/navbar";
 
