--- a/src/client/assets/styles/base/_base.scss
+++ b/src/client/assets/styles/base/_base.scss
@@ -13,15 +13,6 @@ p {
 }
 
 a {
-  color: $primary-accent;
-
-  &:visited {
-    color: $primary-accent;
-  }
+  color: inherit;
+  text-decoration: none;
 }
-
-// @media screen and (max-width: 350px) {
-//   html {
-//     font-size: 12px;
-//   }
-// }
