--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "./components/movie-table";
 @import "./components/mobile/navmenu";
 @import "./components/desktop/navbar";
+@import "./components/search-extended";
 
 // page components
 @import "./pages/index";
