--- a/src/client/assets/styles/pages/_search.scss
+++ b/src/client/assets/styles/pages/_search.scss
@@ -1,4 +1,5 @@
-.p-search__search {
-  max-width: 30rem;
-  margin: 1rem auto;
+.p-search {
+  &__search-extended {
+    margin-block: 2rem;
+  }
 }
