--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./base/base";
 @import "./base/button";
 @import "./base/typography";
+@import "./base/utilities";
 
 // layout components and grid macro layouts
 @import "./layouts/default";
