start work on dynamic movie details pages

--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -25,6 +25,7 @@
 @import "./components/mobile/navmenu";
 @import "./components/desktop/navbar";
 @import "./components/search-extended";
+@import "./components/movie";
 
 // page components
 @import "./pages/index";
